Add COMP15 Lab role point

--- a/source.tex
+++ b/source.tex
@@ -117,8 +117,8 @@
     \resumeSubheading
       {Tufts University}{Aug. 2022 -- May 2026}
       {GPA 3.85, BS Computer Science, BS Mathematics}{Somerville, MA}
-      \resumeSubSubheading{Relevant Coursework: Algorithms, Network security, Data structures}{}
-      \resumeSubSubheading{Machine structure and Assembly programming, Multivariable calculus, Linear algebra}{}{}{}
+      \resumeSubSubheading{Relevant Coursework: Algorithms, Network security, Machine structure, Assembly programming}{}
+      \resumeSubSubheading{Data structures, Multivariable calculus, Linear algebra}{}{}{}
   \resumeSubHeadingListEnd
 
 % REMOVE HERE FOR ONE PAGE
@@ -144,14 +144,15 @@
         \resumeItem{Practice team-based coding powered by Git and GitHub collaboration tools}
       \resumeItemListEnd
 
-      \resumeSubheading
-      {Tufts University, Department of Computer Science}{May 2023 – Present}
-      {Course Assistant for Data Structures and Algorithms}{Somerville, MA}
-      \resumeItemListStart
-        \resumeItem{Host office hours aiding students in course projects and lecture topics}
-        \resumeItem{Grade student assignments by studying submissions for functionality, testing, and course coding standards}
-        \resumeItem{Contribute to a program that organizes course grading built as a Python CLI mimicking a SQL database}
-      \resumeItemListEnd
+      \resumeSubheading {Tufts University, Department of Computer Science}{May
+      2023 – Present} {Course Assistant for Data Structures}{Somerville, MA} \resumeItemListStart \resumeItem{Host office
+      hours aiding students in course projects and lecture topics}
+      \resumeItem{Deliver comprehensive lectures about topics and reinforce concepts through coding
+      excercises for a 30+ student lab} 
+      \resumeItem{Grade student assignments by studying submissions
+      for functionality, testing, and course coding standards}
+      \resumeItem{Contribute to a program that organizes course grading built as
+      a Python CLI mimicking a SQL database} \resumeItemListEnd
 
       \resumeSubheading
       {Tufts University, Office of Academic Space Management}{May 2023 – Present}
