Change phone number and COMP15 infra bullet

--- a/source.tex
+++ b/source.tex
@@ -103,7 +103,7 @@
 
 \begin{center}
     \textbf{\Huge \scshape Vedant Modi} \\ \vspace{1pt}
-    \small 832-963-0248 $|$ \href{mailto:vedant@vedantmodi.com}{\underline{vedant@vedantmodi.com}} $|$ 
+    \small \href{tel:+18329630248}{+1 (832) 963-0248} $|$ \href{mailto:vedant@vedantmodi.com}{\underline{vedant@vedantmodi.com}} $|$ 
     \href{https://www.vedantmodi.com}{\underline{vedantmodi.com}} $|$
     \href{https://github.com/thevedantmodi}{\underline{github.com/thevedantmodi}} $|$
     \href{https://www.linkedin.com/in/thevedantmodi}{\underline{linkedin.com/in/thevedantmodi}}
@@ -146,13 +146,12 @@
 
       \resumeSubheading {Tufts University, Department of Computer Science}{May
       2023 – Present} {Course Assistant for Data Structures}{Somerville, MA} \resumeItemListStart \resumeItem{Host office
-      hours aiding students in course projects and lecture topics}
-      \resumeItem{Deliver comprehensive lectures about topics and reinforce concepts through coding
-      excercises for a 30+ student lab} 
+      hours aiding students in course assignments and explaining lecture topics}
+      \resumeItem{Deliver comprehensive lectures about topics and reinforce concepts via coding
+      excercises for weekly 30+ student lab} 
       \resumeItem{Grade student assignments by studying submissions
       for functionality, testing, and course coding standards}
-      \resumeItem{Contribute to a program that organizes course grading built as
-      a Python CLI mimicking a SQL database} \resumeItemListEnd
+      \resumeItem{Contribute to course infrastructure } \resumeItemListEnd
 
       \resumeSubheading
       {Tufts University, Office of Academic Space Management}{May 2023 – Present}
