Add COMP15 infra

--- a/source.tex
+++ b/source.tex
@@ -151,7 +151,8 @@
       excercises for weekly 30+ student lab} 
       \resumeItem{Grade student assignments by studying submissions
       for functionality, testing, and course coding standards}
-      \resumeItem{Contribute to course infrastructure } \resumeItemListEnd
+      \resumeItem{Contribute to course infrastructure—autograding
+      software, unit tests, organizing TA grading, and project solutions} \resumeItemListEnd
 
       \resumeSubheading
       {Tufts University, Office of Academic Space Management}{May 2023 – Present}
