Move COMP15 on top of Jumbocode

--- a/source.tex
+++ b/source.tex
@@ -135,6 +135,19 @@
 \section{Experience}
   \resumeSubHeadingListStart
 
+
+  \resumeSubheading {Tufts University, Department of Computer Science}{May
+      2023 – Present} {Course Assistant for Data Structures}{Somerville, MA} \resumeItemListStart \resumeItem{Host office
+      hours aiding students in course assignments and explaining lecture topics}
+      \resumeItem{Deliver comprehensive lectures about topics and reinforce concepts via coding
+      excercises for weekly 30+ student lab} 
+      \resumeItem{Grade student assignments by studying submissions
+      for functionality, testing, and course coding standards}
+      \resumeItem{Contribute to course infrastructure—autograding
+      software, unit tests, organizing TA grading, and project solutions} 
+      \resumeItemListEnd
+
+      
     \resumeSubheading
       {Tufts JumboCode}{September 2023 – Present}
       {Developer}{Somerville, MA}
@@ -144,15 +157,7 @@
         \resumeItem{Practice team-based coding powered by Git and GitHub collaboration tools}
       \resumeItemListEnd
 
-      \resumeSubheading {Tufts University, Department of Computer Science}{May
-      2023 – Present} {Course Assistant for Data Structures}{Somerville, MA} \resumeItemListStart \resumeItem{Host office
-      hours aiding students in course assignments and explaining lecture topics}
-      \resumeItem{Deliver comprehensive lectures about topics and reinforce concepts via coding
-      excercises for weekly 30+ student lab} 
-      \resumeItem{Grade student assignments by studying submissions
-      for functionality, testing, and course coding standards}
-      \resumeItem{Contribute to course infrastructure—autograding
-      software, unit tests, organizing TA grading, and project solutions} \resumeItemListEnd
+      
 
       \resumeSubheading
       {Tufts University, Office of Academic Space Management}{May 2023 – Present}
