Add Red Hat resume

--- a/source.tex
+++ b/source.tex
@@ -13,6 +13,15 @@
 \usepackage{tabularx}
 \input{glyphtounicode}
 
+% ! Remove here for margin stretches
+% \usepackage{geometry}
+%  \geometry{
+%  a4paper,
+%  total={170mm,350mm},
+%  left=20mm,
+%  top=20mm,
+%  }
+%  \usepackage[top=0pt ,foot=0pt, bottom=0.01in, left=0.2in, right=0.2in]{geometry}
 
 %----------FONT OPTIONS----------
 % sans-serif
@@ -103,10 +112,10 @@
 
 \begin{center}
     \textbf{\Huge \scshape Vedant Modi} \\ \vspace{1pt}
-    \small \href{tel:+18329630248}{+1 (832) 963-0248} $|$ \href{mailto:vedant@vedantmodi.com}{\underline{vedant@vedantmodi.com}} $|$ 
-    \href{https://www.vedantmodi.com}{\underline{vedantmodi.com}} $|$
-    \href{https://github.com/thevedantmodi}{\underline{github.com/thevedantmodi}} $|$
-    \href{https://www.linkedin.com/in/thevedantmodi}{\underline{linkedin.com/in/thevedantmodi}}
+    \small \href{mailto:vedant@vedantmodi.com}{\underline{vedant@vedantmodi.com}} $|$ 
+    \small \href{https://www.vedantmodi.com}{\underline{vedantmodi.com}} $|$
+    \small \href{https://github.com/thevedantmodi}{\underline{github.com/thevedantmodi}} $|$
+    \small \href{https://www.linkedin.com/in/thevedantmodi}{\underline{linkedin.com/in/thevedantmodi}}
     
 \end{center}
 
@@ -117,17 +126,19 @@
     \resumeSubheading
       {Tufts University}{Aug. 2022 -- May 2026}
       {GPA 3.85, BS Computer Science, BS Mathematics}{Somerville, MA}
-      \resumeSubSubheading{Relevant Coursework: Algorithms, Network security, Machine structure, Assembly programming}{}
-      \resumeSubSubheading{Data structures, Multivariable calculus, Linear algebra}{}{}{}
+      \resumeSubSubheading{Significant Coursework: Algorithms, Network security, Machine structure, Assembly programming}{}
+    \resumeSubSubheading{Data structures, Multivariable calculus, Linear
+    algebra, Mathematical proofs, Climate science, Political cinema}{}{}{}
   \resumeSubHeadingListEnd
 
 % REMOVE HERE FOR ONE PAGE
-\resumeSubHeadingListStart
-    \resumeSubheading
-      {Carnegie Vanguard High School}{Aug. 2018 – May 2022}
-      {GPA 4.70 / 4.00}{Houston, TX}
-      \resumeSubSubheading{Significant Activities: International Thespian Society, National Honor Society, Interact}{}
-  \resumeSubHeadingListEnd
+% \resumeSubHeadingListStart
+%     \resumeSubheading
+%       {Carnegie Vanguard High School}{Aug. 2018 – May 2022}
+%       {GPA 4.70 / 4.00, SAT: 1530 / 1600}{Houston, TX}
+%     \resumeSubSubheading{Significant Activities: International Thespian
+%     Society, National Honor Society, Interact}{}
+%   \resumeSubHeadingListEnd
 % END REMOVE
 
 
@@ -135,133 +146,159 @@
 \section{Experience}
   \resumeSubHeadingListStart
 
-
   \resumeSubheading {Tufts University, Department of Computer Science}{May
-      2023 – Present} {Course Assistant for Data Structures}{Somerville, MA} \resumeItemListStart \resumeItem{Host office
+      2023 – Present} {Course Assistant for Data Structures}{Somerville, MA} 
+      \resumeItemListStart 
+      \resumeItem{Contribute to course infrastructure—autograding
+      software, unit tests, organizing TA grading, and project solutions} 
+      \resumeItem{Host office
       hours aiding students in course assignments and explaining lecture topics}
       \resumeItem{Deliver comprehensive lectures about topics and reinforce concepts via coding
       excercises for weekly 30+ student lab} 
       \resumeItem{Grade student assignments by studying submissions
       for functionality, testing, and course coding standards}
-      \resumeItem{Contribute to course infrastructure—autograding
-      software, unit tests, organizing TA grading, and project solutions} 
       \resumeItemListEnd
 
       
     \resumeSubheading
       {Tufts JumboCode}{September 2023 – Present}
-      {Developer}{Somerville, MA}
+      {Full-Stack Developer}{Somerville, MA}
       \resumeItemListStart
-        \resumeItem{Develop an app benefiting the Emerald Necklace Conservancy educating visitors on preservation}
-        \resumeItem{Design a full-stack web application using React, MongoDB, Bun}
+        \resumeItem{Develop a full-stack web application app benefiting the Emerald Necklace Conservancy educating visitors on preservation}
+      \resumeItem{Cultivate an interest in Boston's historical parks by
+      creating an engaging product using React, MongoDB, Bun}
         \resumeItem{Practice team-based coding powered by Git and GitHub collaboration tools}
       \resumeItemListEnd
-
-      
-
       \resumeSubheading
       {Tufts University, Office of Academic Space Management}{May 2023 – Present}
       {Receptionist}{Somerville, MA}
       \resumeItemListStart
-        \resumeItem{Service community via organizing mail, and analyzing building usage for largest academic buildings on campus}
+        \resumeItem{Service community via organizing mail and analyzing building usage for largest academic buildings on campus}
       \resumeItemListEnd
-
-    \resumeSubheading
-      {Texas Heart Institute}{May 2021 – Aug 2021}
-      {Visual Communications Intern}{Houston, TX}
-      \resumeItemListStart
-        \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
-        \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
-    \resumeItemListEnd
+    % \resumeSubheading
+    %   {Texas Heart Institute}{May 2021 – Aug 2021}
+    %   {Visual Communications Intern}{Houston, TX}
+    %   \resumeItemListStart
+    %     \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
+    %     \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
+    % \resumeItemListEnd
 
 % REMOVE HERE FOR ONE PAGE
-      \resumeSubheading
-      {Carnegie Theatre Company}{Aug. 2018 – May 2022}
-      {Webmaster, Media Designer}{Houston, TX}
-      \resumeItemListStart
-        \resumeItem{Maintained website, social media, ticket sales, and production marketing graphics.}
-        \resumeItem{Designed live projections, edited videos, and rigged lights for productions.}
-        \resumeItem{Recognized by the International Thespian Society for work on theatrical marketing.}
-      \resumeItemListEnd
+      % \resumeSubheading
+      % {Carnegie Theatre Company}{Aug. 2018 – May 2022}
+      % {Webmaster, Media Designer}{Houston, TX}
+      % \resumeItemListStart
+      %   \resumeItem{Maintained website, social media, ticket sales, and production marketing graphics.}
+      %   \resumeItem{Designed live projections, edited videos, and rigged lights for productions.}
+      %   \resumeItem{Recognized by the International Thespian Society for work on theatrical marketing.}
+      % \resumeItemListEnd
 % END REMOVE
-
   \resumeSubHeadingListEnd
 %-----------PROJECTS-----------
 \section{Relevant Projects}
     \resumeSubHeadingListStart
     \resumeProjectHeading
-        {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
+        {\textbf{Universal Machine} $|$ \emph{C, x86-64 Assembly, Makefile, Bash}}{Nov. 2023}
         \resumeItemListStart
-          \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
-          \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
-          \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
-          \resumeItemListEnd
+  \resumeItem{Created a virtual machine tested with custom-devised unit-testing framework}
+    \resumeItem{Profiled the program by analyzing x86-64 Assembly machine code
+    and \texttt{qcachegrind}}
+  \resumeItem{Recreated the venerable HP15-C via Assembly code derived from
+  the Universal Machine's ISA}
+        \resumeItemListEnd
+    % \resumeProjectHeading
+    %     {\textbf{arith} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
+    %     \resumeItemListStart
+    % \resumeItem{Wrote a low-level, multi-phase JPEG-style
+    % compressor/decompressor }
+    %     \resumeItemListEnd
     \resumeProjectHeading
-          {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
-          \resumeItemListStart
-            \resumeItem{Construct a REMOVE THIS NOW tool to aid sleeptime changes when traveling between timezones during air travel,
-            given flight details (e.g. airports, departure and arrival
-            times)}
-            \resumeItem{Craft using Python \texttt{tz} library and database of IATA-recognised airports to parse user input to calculations}
-          \resumeItemListEnd
-      GAMING, WEBDEV
-      \resumeProjectHeading
-          {\textbf{IATA Guesser} $|$ \emph{JavaScript, HTML, CSS}}{Jul. 2023}
-          \resumeItemListStart
-            \resumeItem{Memory game generating random IATA airport codes for the user to recall}
-            \resumeItem{Used Toastr for popups reflecting answer and created a custom autocomplete search box}
-          \resumeItemListEnd
-      DATA SCIENCE
-      \resumeProjectHeading
-          {\textbf{IATA Country Sorter} $|$ \emph{Python}}{Jul. 2023}
-          \resumeItemListStart
-            \resumeItem{Invented a sorting script that maps inputted IATA airport codes into an output file for their country.}
-            \resumeItem{Used for searching for flights by country in ITA Matrix}
-          \resumeItemListEnd
-      MACHINE STRUCTURE
-      \resumeProjectHeading
-          {\textbf{arith} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
-          \resumeItemListStart
-            \resumeItem{Wrote a low-level, multi-phase JPEG-style compressor/decompressor with a partner}
-            \resumeItem{Learned how to perform floating point arithmetic and pack/unpack binary data modularly}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{vfl} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
-          \resumeItemListStart
-          \resumeItem{Authored a program that reads/writes binary files representing flight itineraries}
-          \resumeItem{Practiced optimizing file size by considering how many bits needed for each itinerary detail}
-          \resumeItemListEnd
-      ALGOS
-      \resumeProjectHeading
-          {\textbf{gerp} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023 – May 2023}
-          \resumeItemListStart
-            \resumeItem{Built a program with partner that searches for user-queried text from specified directory}
-            \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and collaborated via Git}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{zap} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023}
-          \resumeItemListStart
-          \resumeItem{Wrote a Huffman compressor/decompressor for text files and practiced using priority queue ADT and recursion}
-          \resumeItemListEnd
+    {\textbf{vfl} $|$ \emph{C, Makefile, Python, Bash}}{Oct. 2023}
+    \resumeItemListStart
+    \resumeItem{Authored a program that reads/writes binary files representing
+    flight itineraries utilizing bitmasking principles}
+    \resumeItem{Wrote a collection of Python modules that aid the
+    compression, like quantizing timezones, or finding the UTC offset of
+    an airport, given its code}
+    \resumeItemListEnd
+    \resumeProjectHeading
+    {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
+    \resumeItemListStart
+    \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
+    \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
+    \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
+    \resumeItemListEnd
+    \resumeProjectHeading
+    {\textbf{Encrypted IM} $|$ \emph{Python}}{Jan. 2024}
+    \resumeItemListStart
+    \resumeItem{Implemented a peer-to-peer encrypted instant messenger, as a practice in network programming and encryption}
+    \resumeItemListEnd
+    % \resumeProjectHeading
+    %     {\textbf{Locality} $|$ \emph{C, Makefile, Bash}}{Sep. 2023}
+    %     \resumeItemListStart
+    % \resumeItem{Wrote and profiled a raw image transformer storing the 2D image data in
+    % various orders to demonstrate locality of reference}
+    %     \resumeItemListEnd
+    % \resumeProjectHeading
+    %       {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
+    %       \resumeItemListStart
+    %         \resumeItem{Construct a tool to aid sleeptime changes when traveling between timezones during air travel,
+    %         given flight details (e.g. airports, departure and arrival
+    %         times)}
+    %         \resumeItem{Craft using Python \texttt{tz} library and database of IATA-recognised airports to parse user input to calculations}
+    %       \resumeItemListEnd
+      % GAMING, WEBDEV
+      % \resumeProjectHeading
+      %     {\textbf{IATA Guesser} $|$ \emph{JavaScript, HTML, CSS}}{Jul. 2023}
+      %     \resumeItemListStart
+      %       \resumeItem{Memory game generating random IATA airport codes for the user to recall}
+      %       \resumeItem{Used Toastr for popups reflecting answer and created a custom autocomplete search box}
+      %     \resumeItemListEnd
+      % DATA SCIENCE
+      % \resumeProjectHeading
+      %     {\textbf{IATA Country Sorter} $|$ \emph{Python}}{Jul. 2023}
+      %     \resumeItemListStart
+      %     \resumeItem{Wrote sorting script that maps inputted IATA airport codes into an output file for their country.}
+      %     \resumeItem{Used by 100+ people in flight-searching community for
+      %     searching for country-specific flights in ITA Matrix}
+      %     \resumeItemListEnd
+      % MACHINE STRUCTURE
+      % ALGOS
+      % \resumeProjectHeading
+      %     {\textbf{gerp} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023 – May 2023}
+      %     \resumeItemListStart
+      %       \resumeItem{Built a program with partner that searches for user-queried text from specified directory}
+      %       \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and collaborated via Git}
+      %     \resumeItemListEnd
+      % \resumeProjectHeading
+      %     {\textbf{zap} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023}
+      %     \resumeItemListStart
+      %     \resumeItem{Wrote a Huffman compressor/decompressor for text files and practiced using priority queue ADT and recursion}
+      %     \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
 
 %
 %-----------SKILLS-----------
-\section{Skills and Interests}
+\section{Technical Skills}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Programming Languages}{: C/C++, Python, Assembly, JavaScript, TypeScript, HTML/CSS, R, SQL, LaTeX} \\
+     \textbf{Programming Languages}{: C/C++, Python, x86-64 Assembly, JavaScript, TypeScript, HTML/CSS, R, SQL, \LaTeX} \\
      \textbf{Frameworks and Environments}{: React, React Native, Node.js, MongoDB, Bun} \\
-     \textbf{Technical Topics}{: Machine arithmetic, memory architecture, performance analytics, data structures and algorithms, compilers, object-oriented programming} \\
-     \textbf{Developer Tools}{: Visual Studio Code, Git, GitHub, GCC, Makefile, Figma, Linux/Unix, Bash, SSH, AutoHotkey} \\
-     \textbf{APIs and Libraries}{: LeafletJS, OpenStreetMap, Maptiler, Maplibre, Mapbox, ArcGIS, OpenSkyNetwork, pandas, tz} \\
-     \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, Premiere Pro, InDesign, Wordpress} \\
+     \textbf{Technical Topics}{: Software testing, object-oriented design,
+     encrypted network programming, machine arithmetic, memory hierarchy
+     (especially cache structures), performance analytics, data structures,
+     algorithms, compilers} \\
+     \textbf{Developer Tools}{: Linux/UNIX terminal, shell scripting,
+     Git/GitHub-assisted development, GCC, Makefile, Figma} \\
+     \textbf{JavaScript APIs}{: Mapping APIs (e.g. MapBox, OpenStreetMap)} \\
+     \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz}\\
      \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish, and French} \\
-     \textbf{Travel}{: Hiking mountains, traveling to novel destinations, searching for amazing flight deals} \\
-     \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
-     \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
+     \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, Premiere Pro, InDesign, Wordpress} \\
+    %  \textbf{Travel}{: Hiking mountains, traveling to novel destinations, searching for amazing flight deals} \\
+    %  \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
+    %  \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
      
     }}
  \end{itemize}
