Update dates on Projects

--- a/source.tex
+++ b/source.tex
@@ -198,7 +198,8 @@
 \section{Relevant Projects}
     \resumeSubHeadingListStart
     \resumeProjectHeading
-        {\textbf{Universal Machine} $|$ \emph{C, x86-64 Assembly, Makefile, Bash}}{Nov. 2023}
+    {\textbf{Universal Machine} $|$ \emph{C, x86-64 Assembly, Makefile,
+    Bash}}{Nov. – Dec. 2023}
         \resumeItemListStart
   \resumeItem{Created a virtual machine tested with custom-devised unit-testing framework}
     \resumeItem{Profiled the program by analyzing x86-64 Assembly machine code
@@ -213,7 +214,7 @@
     % compressor/decompressor }
     %     \resumeItemListEnd
     \resumeProjectHeading
-    {\textbf{vfl} $|$ \emph{C, Makefile, Python, Bash}}{Oct. 2023}
+    {\textbf{vfl} $|$ \emph{C, Makefile, Python, Bash}}{Oct. 2023 – Feb. 2024}
     \resumeItemListStart
     \resumeItem{Authored a program that reads/writes binary files representing
     flight itineraries utilizing bitmasking principles}
@@ -222,7 +223,7 @@
     an airport, given its code}
     \resumeItemListEnd
     \resumeProjectHeading
-    {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
+    {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Jul. – Aug. 2023}
     \resumeItemListStart
     \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
     \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
