--- a/source.tex
+++ b/source.tex
@@ -154,7 +154,7 @@
       \resumeItem{Host office
       hours aiding students in course assignments and explaining lecture topics}
       \resumeItem{Deliver comprehensive lectures about topics and reinforce concepts via coding
-      excercises for weekly 30+ student lab} 
+      exercises for weekly 30+ student lab} 
       \resumeItem{Grade student assignments by studying submissions
       for functionality, testing, and course coding standards}
       \resumeItemListEnd
