Add new resume permutation

--- a/source.tex
+++ b/source.tex
@@ -169,50 +169,57 @@
       creating an engaging product using React, MongoDB, Bun}
         \resumeItem{Practice team-based coding powered by Git and GitHub collaboration tools}
       \resumeItemListEnd
-      \resumeSubheading
-      {Tufts University, Office of Academic Space Management}{May 2023 – Present}
-      {Receptionist}{Somerville, MA}
+      % \resumeSubheading
+      % {Tufts University, Office of Academic Space Management}{May 2023 – Present}
+      % {Receptionist}{Somerville, MA}
+      % \resumeItemListStart
+      %   \resumeItem{Service community via organizing mail and analyzing building usage for largest academic buildings on campus}
+      % \resumeItemListEnd
+    \resumeSubheading
+      {Texas Heart Institute}{May 2021 – Aug 2021}
+      {Visual Communications Intern}{Houston, TX}
       \resumeItemListStart
-        \resumeItem{Service community via organizing mail and analyzing building usage for largest academic buildings on campus}
-      \resumeItemListEnd
-    % \resumeSubheading
-    %   {Texas Heart Institute}{May 2021 – Aug 2021}
-    %   {Visual Communications Intern}{Houston, TX}
-    %   \resumeItemListStart
-    %     \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
-    %     \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
-    % \resumeItemListEnd
+        \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
+        \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
+    \resumeItemListEnd
 
 % REMOVE HERE FOR ONE PAGE
-      % \resumeSubheading
-      % {Carnegie Theatre Company}{Aug. 2018 – May 2022}
-      % {Webmaster, Media Designer}{Houston, TX}
-      % \resumeItemListStart
-      %   \resumeItem{Maintained website, social media, ticket sales, and production marketing graphics.}
-      %   \resumeItem{Designed live projections, edited videos, and rigged lights for productions.}
-      %   \resumeItem{Recognized by the International Thespian Society for work on theatrical marketing.}
-      % \resumeItemListEnd
+      \resumeSubheading
+      {Carnegie Theatre Company}{Aug. 2018 – May 2022}
+      {Webmaster, Media Designer}{Houston, TX}
+      \resumeItemListStart
+        \resumeItem{Maintained website, social media, ticket sales, and production marketing graphics.}
+        \resumeItem{Designed live projections, edited videos, and rigged lights for productions.}
+        \resumeItem{Recognized by the International Thespian Society for work on theatrical marketing.}
+      \resumeItemListEnd
 % END REMOVE
   \resumeSubHeadingListEnd
 %-----------PROJECTS-----------
 \section{Relevant Projects}
     \resumeSubHeadingListStart
-    \resumeProjectHeading
-    {\textbf{Universal Machine} $|$ \emph{C, x86-64 Assembly, Makefile,
-    Bash}}{Nov. – Dec. 2023}
-        \resumeItemListStart
-  \resumeItem{Created a virtual machine tested with custom-devised unit-testing framework}
-    \resumeItem{Profiled the program by analyzing x86-64 Assembly machine code
-    and \texttt{qcachegrind}}
-  \resumeItem{Recreated the venerable HP15-C via Assembly code derived from
-  the Universal Machine's ISA}
-        \resumeItemListEnd
+  %   \resumeProjectHeading
+  %   {\textbf{Universal Machine} $|$ \emph{C, x86-64 Assembly, Makefile,
+  %   Bash}}{Nov. – Dec. 2023}
+  %       \resumeItemListStart
+  % \resumeItem{Created a virtual machine tested with custom-devised unit-testing framework}
+  %   \resumeItem{Profiled the program by analyzing x86-64 Assembly machine code
+  %   and \texttt{qcachegrind}}
+  % \resumeItem{Recreated the venerable HP15-C via Assembly code derived from
+  % the Universal Machine's ISA}
+  %       \resumeItemListEnd
     % \resumeProjectHeading
     %     {\textbf{arith} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
     %     \resumeItemListStart
     % \resumeItem{Wrote a low-level, multi-phase JPEG-style
     % compressor/decompressor }
     %     \resumeItemListEnd
+    \resumeProjectHeading
+    {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Jul. – Aug. 2023}
+    \resumeItemListStart
+    \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
+    \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
+    \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
+    \resumeItemListEnd
     \resumeProjectHeading
     {\textbf{vfl} $|$ \emph{C, Makefile, Python, Bash}}{Oct. 2023 – Feb. 2024}
     \resumeItemListStart
@@ -222,18 +229,11 @@
     compression, like quantizing timezones, or finding the UTC offset of
     an airport, given its code}
     \resumeItemListEnd
-    \resumeProjectHeading
-    {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Jul. – Aug. 2023}
-    \resumeItemListStart
-    \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
-    \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
-    \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
-    \resumeItemListEnd
-    \resumeProjectHeading
-    {\textbf{Encrypted IM} $|$ \emph{Python}}{Jan. 2024}
-    \resumeItemListStart
-    \resumeItem{Implemented a peer-to-peer encrypted instant messenger, as a practice in network programming and encryption}
-    \resumeItemListEnd
+    % \resumeProjectHeading
+    % {\textbf{Encrypted IM} $|$ \emph{Python}}{Jan. 2024}
+    % \resumeItemListStart
+    % \resumeItem{Implemented a peer-to-peer encrypted instant messenger, as a practice in network programming and encryption}
+    % \resumeItemListEnd
     % \resumeProjectHeading
     %     {\textbf{Locality} $|$ \emph{C, Makefile, Bash}}{Sep. 2023}
     %     \resumeItemListStart
@@ -285,20 +285,21 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Programming Languages}{: C/C++, Python, x86-64 Assembly, JavaScript, TypeScript, HTML/CSS, R, SQL, \LaTeX} \\
-     \textbf{Frameworks and Environments}{: React, React Native, Node.js, MongoDB, Bun} \\
-     \textbf{Technical Topics}{: Software testing, object-oriented design,
-     encrypted network programming, machine arithmetic, memory hierarchy
-     (especially cache structures), performance analytics, data structures,
-     algorithms, compilers} \\
-     \textbf{Developer Tools}{: Linux/UNIX terminal, shell scripting,
-     Git/GitHub-assisted development, GCC, Makefile, Figma} \\
-     \textbf{JavaScript APIs}{: Mapping APIs (e.g. MapBox, OpenStreetMap)} \\
-     \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz}\\
-     \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish, and French} \\
-     \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, Premiere Pro, InDesign, Wordpress} \\
-    %  \textbf{Travel}{: Hiking mountains, traveling to novel destinations, searching for amazing flight deals} \\
-    %  \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
+      \textbf{Programming Languages}{: C/C++, Python, x86-64 Assembly, JavaScript, TypeScript, HTML/CSS, R, SQL, \LaTeX} \\
+      \textbf{Frameworks and Environments}{: React, React Native, Node.js, MongoDB, Bun} \\
+      \textbf{Technical Topics}{: Software testing, object-oriented design,
+      encrypted network programming, machine arithmetic, memory hierarchy
+      (especially cache structures), performance analytics, data structures,
+      algorithms, compilers} \\
+      \textbf{Developer Tools}{: Linux/UNIX terminal, shell scripting,
+      Git/GitHub-assisted development, GCC, Makefile, Figma} \\
+      \textbf{JavaScript APIs}{: Mapping APIs (e.g. MapBox, Maplibre, LeafletJS,
+      OpenStreetMap)} \\
+      \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz}\\
+      \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish, and French} \\
+      \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, Premiere Pro, InDesign, Wordpress} \\
+     \textbf{Travel}{: Hiking mountains, traveling to novel destinations, searching for amazing flight deals} \\
+     \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
     %  \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
      
     }}
