--- a/source.tex
+++ b/source.tex
@@ -294,7 +294,7 @@
       \textbf{Developer Tools}{: Linux/UNIX terminal, shell scripting,
       Git/GitHub-assisted development, GCC, Makefile, Figma} \\
       \textbf{JavaScript APIs}{: Mapping APIs (e.g. MapBox, Maplibre, LeafletJS,
-      OpenStreetMap)} \\
+      OpenStreetMap, qGIS)} \\
       \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz}\\
       \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish, and French} \\
       \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, Premiere Pro, InDesign, Wordpress} \\
