--- a/source.tex
+++ b/source.tex
@@ -122,12 +122,12 @@
   \resumeSubHeadingListEnd
 
 % REMOVE HERE FOR ONE PAGE
-\resumeSubHeadingListStart
-    \resumeSubheading
-      {Carnegie Vanguard High School}{Aug. 2018 – May 2022}
-      {GPA 4.70 / 4.00}{Houston, TX}
-      \resumeSubSubheading{Significant Activities: International Thespian Society, National Honor Society, Interact}{}
-  \resumeSubHeadingListEnd
+% \resumeSubHeadingListStart
+%     \resumeSubheading
+%       {Carnegie Vanguard High School}{Aug. 2018 – May 2022}
+%       {GPA 4.70 / 4.00}{Houston, TX}
+%       \resumeSubSubheading{Significant Activities: International Thespian Society, National Honor Society, Interact}{}
+%   \resumeSubHeadingListEnd
 % END REMOVE
 
 
@@ -166,23 +166,23 @@
         \resumeItem{Service community via organizing mail, and analyzing building usage for largest academic buildings on campus}
       \resumeItemListEnd
 
-    \resumeSubheading
-      {Texas Heart Institute}{May 2021 – Aug 2021}
-      {Visual Communications Intern}{Houston, TX}
-      \resumeItemListStart
-        \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
-        \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
-    \resumeItemListEnd
+    % \resumeSubheading
+    %   {Texas Heart Institute}{May 2021 – Aug 2021}
+    %   {Visual Communications Intern}{Houston, TX}
+    %   \resumeItemListStart
+    %     \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
+    %     \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
+    % \resumeItemListEnd
 
 % REMOVE HERE FOR ONE PAGE
-      \resumeSubheading
-      {Carnegie Theatre Company}{Aug. 2018 – May 2022}
-      {Webmaster, Media Designer}{Houston, TX}
-      \resumeItemListStart
-        \resumeItem{Maintained website, social media, ticket sales, and production marketing graphics.}
-        \resumeItem{Designed live projections, edited videos, and rigged lights for productions.}
-        \resumeItem{Recognized by the International Thespian Society for work on theatrical marketing.}
-      \resumeItemListEnd
+      % \resumeSubheading
+      % {Carnegie Theatre Company}{Aug. 2018 – May 2022}
+      % {Webmaster, Media Designer}{Houston, TX}
+      % \resumeItemListStart
+      %   \resumeItem{Maintained website, social media, ticket sales, and production marketing graphics.}
+      %   \resumeItem{Designed live projections, edited videos, and rigged lights for productions.}
+      %   \resumeItem{Recognized by the International Thespian Society for work on theatrical marketing.}
+      % \resumeItemListEnd
 % END REMOVE
 
   \resumeSubHeadingListEnd
@@ -196,53 +196,53 @@
           \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
           \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
           \resumeItemListEnd
-    \resumeProjectHeading
-          {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
-          \resumeItemListStart
-            \resumeItem{Construct a REMOVE THIS NOW tool to aid sleeptime changes when traveling between timezones during air travel,
-            given flight details (e.g. airports, departure and arrival
-            times)}
-            \resumeItem{Craft using Python \texttt{tz} library and database of IATA-recognised airports to parse user input to calculations}
-          \resumeItemListEnd
-      GAMING, WEBDEV
+    % \resumeProjectHeading
+    %       {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
+    %       \resumeItemListStart
+    %         \resumeItem{Construct a REMOVE THIS NOW tool to aid sleeptime changes when traveling between timezones during air travel,
+    %         given flight details (e.g. airports, departure and arrival
+    %         times)}
+    %         \resumeItem{Craft using Python \texttt{tz} library and database of IATA-recognised airports to parse user input to calculations}
+    %       \resumeItemListEnd
+      % GAMING, WEBDEV
       \resumeProjectHeading
           {\textbf{IATA Guesser} $|$ \emph{JavaScript, HTML, CSS}}{Jul. 2023}
           \resumeItemListStart
             \resumeItem{Memory game generating random IATA airport codes for the user to recall}
             \resumeItem{Used Toastr for popups reflecting answer and created a custom autocomplete search box}
           \resumeItemListEnd
-      DATA SCIENCE
-      \resumeProjectHeading
-          {\textbf{IATA Country Sorter} $|$ \emph{Python}}{Jul. 2023}
-          \resumeItemListStart
-            \resumeItem{Invented a sorting script that maps inputted IATA airport codes into an output file for their country.}
-            \resumeItem{Used for searching for flights by country in ITA Matrix}
-          \resumeItemListEnd
-      MACHINE STRUCTURE
-      \resumeProjectHeading
-          {\textbf{arith} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
-          \resumeItemListStart
-            \resumeItem{Wrote a low-level, multi-phase JPEG-style compressor/decompressor with a partner}
-            \resumeItem{Learned how to perform floating point arithmetic and pack/unpack binary data modularly}
-          \resumeItemListEnd
+      % DATA SCIENCE
+      % \resumeProjectHeading
+      %     {\textbf{IATA Country Sorter} $|$ \emph{Python}}{Jul. 2023}
+      %     \resumeItemListStart
+      %       \resumeItem{Invented a sorting script that maps inputted IATA airport codes into an output file for their country.}
+      %       \resumeItem{Used for searching for flights by country in ITA Matrix}
+      %     \resumeItemListEnd
+      % MACHINE STRUCTURE
+      % \resumeProjectHeading
+      %     {\textbf{arith} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
+      %     \resumeItemListStart
+      %       \resumeItem{Wrote a low-level, multi-phase JPEG-style compressor/decompressor with a partner}
+      %       \resumeItem{Learned how to perform floating point arithmetic and pack/unpack binary data modularly}
+      %     \resumeItemListEnd
       \resumeProjectHeading
           {\textbf{vfl} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
           \resumeItemListStart
           \resumeItem{Authored a program that reads/writes binary files representing flight itineraries}
           \resumeItem{Practiced optimizing file size by considering how many bits needed for each itinerary detail}
           \resumeItemListEnd
-      ALGOS
-      \resumeProjectHeading
-          {\textbf{gerp} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023 – May 2023}
-          \resumeItemListStart
-            \resumeItem{Built a program with partner that searches for user-queried text from specified directory}
-            \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and collaborated via Git}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{zap} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023}
-          \resumeItemListStart
-          \resumeItem{Wrote a Huffman compressor/decompressor for text files and practiced using priority queue ADT and recursion}
-          \resumeItemListEnd
+    %   ALGOS
+    %   \resumeProjectHeading
+    %       {\textbf{gerp} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023 – May 2023}
+    %       \resumeItemListStart
+    %         \resumeItem{Built a program with partner that searches for user-queried text from specified directory}
+    %         \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and collaborated via Git}
+    %       \resumeItemListEnd
+    %   \resumeProjectHeading
+    %       {\textbf{zap} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023}
+    %       \resumeItemListStart
+    %       \resumeItem{Wrote a Huffman compressor/decompressor for text files and practiced using priority queue ADT and recursion}
+    %       \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
@@ -261,7 +261,7 @@
      \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish, and French} \\
      \textbf{Travel}{: Hiking mountains, traveling to novel destinations, searching for amazing flight deals} \\
      \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
-     \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
+    %  \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
      
     }}
  \end{itemize}
