Change resume bullets

--- a/source.tex
+++ b/source.tex
@@ -226,10 +226,12 @@
       %       \resumeItem{Learned how to perform floating point arithmetic and pack/unpack binary data modularly}
       %     \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{vfl} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
+          {\textbf{vfl} $|$ \emph{C, Makefile, Bash}}{Oct. 2023 – Feb. 2024}
           \resumeItemListStart
           \resumeItem{Authored a program that reads/writes binary files representing flight itineraries}
-          \resumeItem{Practiced optimizing file size by considering how many bits needed for each itinerary detail}
+          \resumeItem{Wrote a collection of Python modules that aid the
+          compression, like quantizing timezones, or finding the UTC offset of
+          an airport, given its code}
           \resumeItemListEnd
     %   ALGOS
     %   \resumeProjectHeading
@@ -252,13 +254,19 @@
 \section{Skills and Interests}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Programming Languages}{: C/C++, Python, Assembly, JavaScript, TypeScript, HTML/CSS, R, SQL, LaTeX} \\
+     \textbf{Programming Languages}{: C/C++, Python, x86-64 Assembly, JavaScript, TypeScript, HTML/CSS, R, SQL, LaTeX} \\
      \textbf{Frameworks and Environments}{: React, React Native, Node.js, MongoDB, Bun} \\
-     \textbf{Technical Topics}{: Machine arithmetic, memory architecture, performance analytics, data structures and algorithms, compilers, object-oriented programming} \\
-     \textbf{Developer Tools}{: Visual Studio Code, Git, GitHub, GCC, Makefile, Figma, Linux/Unix, Bash, SSH, AutoHotkey} \\
-     \textbf{APIs and Libraries}{: LeafletJS, OpenStreetMap, Maptiler, Maplibre, Mapbox, ArcGIS, OpenSkyNetwork, pandas, tz} \\
-     \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, Premiere Pro, InDesign, Wordpress} \\
+     \textbf{Technical Topics}{: Software testing, object-oriented design,
+     encrypted network programming, machine arithmetic, memory hierarchy
+     (especially cache structures), performance analytics, data structures,
+     algorithms, compilers} \\
+     \textbf{Developer Tools}{: Linux/UNIX terminal, shell scripting,
+     Git/GitHub-assisted development, GCC, Makefile, Figma} \\
+     \textbf{JavaScript APIs}{: Mapping APIs (e.g. MapBox, Maplibre, LeafletJS,
+     OpenStreetMap, qGIS)} \\
+     \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz}
      \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish, and French} \\
+     \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, Premiere Pro, InDesign, Wordpress} \\
      \textbf{Travel}{: Hiking mountains, traveling to novel destinations, searching for amazing flight deals} \\
      \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
     %  \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
