--- a/source.tex
+++ b/source.tex
@@ -264,7 +264,7 @@
      Git/GitHub-assisted development, GCC, Makefile, Figma} \\
      \textbf{JavaScript APIs}{: Mapping APIs (e.g. MapBox, Maplibre, LeafletJS,
      OpenStreetMap, qGIS)} \\
-     \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz}
+     \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz} \\
      \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish, and French} \\
      \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, Premiere Pro, InDesign, Wordpress} \\
      \textbf{Travel}{: Hiking mountains, traveling to novel destinations, searching for amazing flight deals} \\
